<resources>
    <string name="app_name">TodoList</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_timer">Timer</string>
    <string name="title_analysis">Analysis</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="min">minutes</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="bundle_info_time">time</string>
    <string name="event_workload">Event Workload: 0\nCompare to the day before yesterday</string>
    <string name="focus_time">Focus Time: 0h\nCompare to the day before yesterday</string>
</resources>