<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_timer"
        android:icon="@drawable/ic_timer"
        android:title="@string/title_timer" />

    <item
        android:id="@+id/navigation_analysis"
        android:icon="@drawable/ic_analysis"
        android:title="@string/title_analysis" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"/>

</menu>