<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.todolist.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.todolist.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" >
        <action
            android:id="@+id/action_navigation_calendar_to_navigation_date"
            app:destination="@id/navigation_date" />
    </fragment>

    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.example.todolist.ui.timer.TimerFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/navigation_analysis"
        android:name="com.example.todolist.ui.analysis.AnalysisFragment"
        android:label="@string/title_analysis"
        tools:layout="@layout/fragment_analysis" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.todolist.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_date"
        android:name="com.example.todolist.ui.calendar.DateFragment"
        android:label="date"
        tools:layout="@layout/fragment_date" >
        <action
            android:id="@+id/action_navigation_date_to_navigation_calendar"
            app:destination="@id/navigation_calendar" />
    </fragment>

</navigation>